@@ -9,6 +9,7 @@
 * Small optimizations and improvements of the dspu::Delay module.
 * Added possibility to specify additional delay for each channel in dspu::Analzer module.
 * Added dspu::hz_to_samples function.
+* Added process_add methods for the dspu::Delay module.
 * Updated build scripts.
 
 === 1.0.18 ===
